# bitty

./: .gitignore  .gitmodules  CMakeLists.txt  bitty.jucer  todo
Builds/MacOSX/: Info-AAX.plist  Info-AU.plist  Info-VST3.plist
Builds/MacOSX/Index/DataStore/v5/records/01/: juce_DragAndDropTarget.h-1Q9LD535TR01  juce_ImageComponent.h-1MO0N8F4ZAM01
Builds/MacOSX/Index/DataStore/v5/records/02/: juce_LookAndFeel_V4.h-1S6L8EKTCXR02
Builds/MacOSX/Index/DataStore/v5/records/04/: juce_MessageManager.cpp-6IFKMJIF3T04
Builds/MacOSX/Index/DataStore/v5/units/: BitmanipProcessor.o-2JDNJWDN0S0HU  HysteresisProcessor.o-3AQJP0HMC7N3I  PluginEditor.o-I3AUNFSQ3EBG  PluginProcessor.o-3KPXD4GVMASLO  include_juce_audio_basics.o-36J3TA0LDIHXH  include_juce_audio_devices.o-12RMHFOG7AVCO  include_juce_audio_formats.o-3C71457IJAX78  include_juce_audio_plugin_client_AU_1.o-2MAS9JM0B378L  include_juce_audio_plugin_client_AU_2.o-1WE5Y8AAE6MAP  include_juce_audio_plugin_client_VST3.o-1CU0WI3ZKWWDI  include_juce_audio_plugin_client_VST_utils.o-PJ9VKQ2YUQQH  include_juce_audio_plugin_client_utils.o-2FE4Q79LGP630  include_juce_audio_processors.o-1VCE5ZBJWIUP  include_juce_audio_utils.o-3U007LPM6YSH8  include_juce_core.o-2UQGOCQWYKJ4Y  include_juce_data_structures.o-2243M4GQ6GN1I  include_juce_dsp.o-EFM6HDG5GXJ7  include_juce_events.o-3TS3EX7UE3NRV  include_juce_graphics.o-1T6MXPVWOLV2B  include_juce_gui_basics.o-2WFNRJI1X95LA  include_juce_gui_extra.o-3KMR341MFGUHA
Builds/MacOSX/bitty.xcodeproj/: project.pbxproj
Builds/MacOSX/bitty.xcodeproj/project.xcworkspace/xcuserdata/zt.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/bitty.xcodeproj/xcuserdata/zt.xcuserdatad/xcschemes/: bitty - All.xcscheme  xcschememanagement.plist
Builds/VisualStudio2019/: NewProject.sln  NewProject_SharedCode.vcxproj  NewProject_SharedCode.vcxproj.filters  NewProject_StandalonePlugin.vcxproj  NewProject_VST3.vcxproj  bitmasker.sln  bitmasker_AAX.vcxproj  bitmasker_AAX.vcxproj.filters  bitmasker_SharedCode.vcxproj  bitmasker_SharedCode.vcxproj.filters  bitmasker_VST3.vcxproj  bitty.sln  bitty_SharedCode.vcxproj  bitty_SharedCode.vcxproj.filters  bitty_VST3.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
JuceLibraryCode/modules/juce_audio_processors/format_types/: juce_VST3PluginFormat.cpp
Source/: BitmanipProcessor.cpp  BitmanipProcessor.h  CMakeLists.txt  Engine.h  HysteresisProcessor.cpp  HysteresisProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
(+1138 files in other folders)
